# TwoMice

./: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  make.txt
migrations/: 000_auth_schema.down.sql  000_auth_schema.up.sql  001_auth_funcs.down.sql  001_auth_funcs.up.sql  002_post_schema.down.sql  002_post_schema.up.sql
migrator/: Cargo.toml
migrator/src/: main.rs
services/auth/: Cargo.toml  Dockerfile
services/auth/migrations/: 000_auth_schema.down.sql  000_auth_schema.up.sql  001_auth_funcs.down.sql  001_auth_funcs.up.sql
services/auth/src/: config.rs  main.rs
services/auth/src/db/: auth.rs  errors.rs  mod.rs
services/auth/src/models/: account.rs  session.rs
services/auth/src/routes/: login.rs  mod.rs  sign_in.rs  validate.rs
services/auth/src/services/: login.rs  mod.rs  password_service.rs
services/auth/src/utils/: errors.rs  mod.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: gateway_app.rs  main.rs  request_handler.rs
services/post/: Cargo.toml  Dockerfile
services/post/migrations/: 000_post_schema.down.sql  000_post_schema.up.sql  001_post_funcs.down.sql  001_post_funcs.up.sql
services/post/src/: main.rs
services/post/src/db/: comment.rs  errors.rs  mod.rs  post.rs
services/post/src/models/: comment.rs  mod.rs
services/post/src/routes/: burrows.rs  comment.rs  echoes.rs  mischief.rs  mod.rs  nibbles.rs  post.rs  squeaks.rs
services/post/src/services/: comment.rs  post.rs
shared/burrow_db/: Cargo.toml
shared/burrow_db/src/: easy_db_call.rs  easy_db_error.rs  lib.rs
shared/config/: Cargo.toml
shared/config/src/: app_data.rs  config.rs  easy_service.rs  lib.rs  logger.rs
shared/custom_headers/: Cargo.toml
shared/custom_headers/src/: lib.rs  session_token.rs  user_id.rs
src/: main.rs
src/database/: account.rs
src/models/: mod.rs  session.rs
utils/: Cargo.toml
utils/src/: config.rs  errors.rs  lib.rs
