[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "migrate", "tls-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
argon2 = "0.5.0"
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.100"
colored = "3.0.0"
uuid = { version = "1.18.1", features = ["serde"] }
utils = { path = "../../utils" }