[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
colored = "3.0.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "migrate", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
utils = { path = "../../utils" }
uuid = { version = "1.18.1", features = ["serde"] }
