[package]
name = "post"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
burrow_db = { path = "../../shared/burrow_db" }
chrono = { version = "0.4.42", features = ["serde"] }
config = { path = "../../shared/config" }
custom_headers = { path = "../../shared/custom_headers" }
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "migrate", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["serde"] }
